Attempting to make this properly sync.

--- a/css/master.sass
+++ b/css/master.sass
@@ -183,6 +183,22 @@ nav
   width: 38%
   margin: auto
   text-align: left
+.exampleLayout
+  list-style: none
+  display: block
+  margin: 0
+  padding: 0
+  border: 0
+  li
+    display: inline
+    margin: 0
+    padding: 0 10px
+    border: 0
+  img
+    width: 13%
+    margin: 0
+    padding: 0
+    border: 0
 #codingSection
   width: 60%
   margin: 10% auto 0 auto
@@ -190,8 +206,15 @@ nav
   width: 60%
   margin: 10% auto 0 auto
 #videoSection
-  width: 60%
+  width: 40%
+  text-align: center
   margin: 10% auto 0 auto
+#videoPlayer
+  margin: -40px auto 10px auto
+  width: 100%
+  padding: 0
+  border: 0
+  box-shadow: 0px 1.2px 6px rgba(0,0,0,.2)
 .codeHead
   position: absolute
   border-radius: 7px 7px 0px 0px
@@ -212,30 +235,7 @@ nav
   width: 60%
   height: 330px
   z-index: 1
-#videoPlayer
-  margin: 0
-  padding: 25px 0px
-  border: 0
-  list-style: none
-  li
-    display: inline-block
-    padding: 40px 0px 0px 15px
-    margin: 0
-    border: 0
-    text-align: center
-    a
-      font-size: 12px
-      text-align: center
-      line-height: .5
-      vertical-align: top
-      text-decoration: none
-      color: #000000
-    img
-      width: 80px
-    a:hover
-      text-decoration: underline
-  .current-song a
-    text-decoration: underline
+
 #playlist
   margin: 0
   padding: 0
