--- a/css/master.css
+++ b/css/master.css
@@ -33,6 +33,8 @@ header {
     position: fixed;
     padding: 0;
     border: 0;
+    display: -webkit-flex;
+    display: -ms-flexbox;
     display: flex;
     line-height: 1;
     margin: 0; }
@@ -41,6 +43,8 @@ header {
   margin: 35px 55px;
   display: inline-block;
   border: 0;
+  -webkit-flex: 1 100%;
+  -ms-flex: 1 100%;
   flex: 1 100%; }
   #siteHeader h1 {
     font-size: 50px;
@@ -67,6 +71,8 @@ header {
   border: 0;
   padding: 7px 10px 20px 0px;
   background-color: rgba(0, 0, 0, 0.2);
+  -webkit-flex: 1 100%;
+  -ms-flex: 1 100%;
   flex: 1 100%;
   z-index: 4; }
   #contactSection button {
@@ -189,6 +195,23 @@ nav {
   margin: auto;
   text-align: left; }
 
+.exampleLayout {
+  list-style: none;
+  display: block;
+  margin: 0;
+  padding: 0;
+  border: 0; }
+  .exampleLayout li {
+    display: inline;
+    margin: 0;
+    padding: 0 10px;
+    border: 0; }
+  .exampleLayout img {
+    width: 13%;
+    margin: 0;
+    padding: 0;
+    border: 0; }
+
 #codingSection {
   width: 60%;
   margin: 10% auto 0 auto; }
@@ -198,8 +221,16 @@ nav {
   margin: 10% auto 0 auto; }
 
 #videoSection {
-  width: 60%;
+  width: 40%;
+  text-align: center;
   margin: 10% auto 0 auto; }
+
+#videoPlayer {
+  margin: -40px auto 10px auto;
+  width: 100%;
+  padding: 0;
+  border: 0;
+  box-shadow: 0px 1.2px 6px rgba(0, 0, 0, 0.2); }
 
 .codeHead {
   position: absolute;
@@ -222,31 +253,6 @@ nav {
   width: 60%;
   height: 330px;
   z-index: 1; }
-
-#videoPlayer {
-  margin: 0;
-  padding: 25px 0px;
-  border: 0;
-  list-style: none; }
-  #videoPlayer li {
-    display: inline-block;
-    padding: 40px 0px 0px 15px;
-    margin: 0;
-    border: 0;
-    text-align: center; }
-    #videoPlayer li a {
-      font-size: 12px;
-      text-align: center;
-      line-height: .5;
-      vertical-align: top;
-      text-decoration: none;
-      color: #000000; }
-    #videoPlayer li img {
-      width: 80px; }
-    #videoPlayer li a:hover {
-      text-decoration: underline; }
-  #videoPlayer .current-song a {
-    text-decoration: underline; }
 
 #playlist {
   margin: 0;
