--- a/css/videoSkin.css
+++ b/css/videoSkin.css
@@ -17,7 +17,7 @@
      Try increasing it to 15px and see what happens. */
   font-size: 10px;
   /* The main font color changes the ICON COLORS as well as the text */
-  color: #fff;
+  color: #000;
 }
 
 /* The "Big Play Button" is the play button that shows before the video plays.
@@ -44,8 +44,7 @@
   /* Align center */
   left: 50%;
   top: 50%;
-  margin-left: -1.5em;
-  margin-top: -0.75em;
+  margin: auto;
 }
 
 /* The default color of control backgrounds is mostly black but with a little
@@ -54,15 +53,15 @@
 .video-js .vjs-big-play-button,
 .video-js .vjs-menu-button .vjs-menu-content {
   /* IE8 - has no alpha support */
-  background-color: #bebebe;
+  background-color: #000;
   /* Opacity: 1.0 = 100%, 0.0 = 0% */
-  background-color: #bebebe;
+  background-color: #fff;
 }
 
 /* Slider - used for Volume bar and Progress bar */
 .video-js .vjs-slider {
-  background-color: white;
-  background-color: rgba(255, 255, 255, 0.5);
+  background-color: #000;
+  background-color: rgba(0, 0, 0, 0.5);
 }
 
 /* The slider bar color is used for the progress bar and the volume bar
@@ -70,22 +69,22 @@
 .video-js .vjs-volume-level,
 .video-js .vjs-play-progress,
 .video-js .vjs-slider-bar {
-  background: #fff;
+  background:rgba(64, 121, 189, 0.7);
 }
 
 /* The main progress bar also has a bar that shows how much has been loaded. */
 .video-js .vjs-load-progress {
   /* For IE8 we'll lighten the color */
-  background: white;
+  background: #000;
   /* Otherwise we'll rely on stacked opacities */
-  background: rgba(255, 255, 255, 0.5);
+  background: rgba(0, 0, 0, 0.5);
 }
 
 /* The load progress bar also has internal divs that represent
    smaller disconnected loaded time ranges */
 .video-js .vjs-load-progress div {
   /* For IE8 we'll lighten the color */
-  background: white;
+  background: #000;
   /* Otherwise we'll rely on stacked opacities */
-  background: rgba(255, 255, 255, 0.75);
+  background: rgba(0, 0, 0, 0.75);
 }
