--- a/css/master.css
+++ b/css/master.css
@@ -33,8 +33,6 @@ header {
     position: fixed;
     padding: 0;
     border: 0;
-    display: -webkit-flex;
-    display: -ms-flexbox;
     display: flex;
     line-height: 1;
     margin: 0; }
@@ -43,8 +41,6 @@ header {
   margin: 35px 55px;
   display: inline-block;
   border: 0;
-  -webkit-flex: 1 100%;
-  -ms-flex: 1 100%;
   flex: 1 100%; }
   #siteHeader h1 {
     font-size: 50px;
@@ -71,8 +67,6 @@ header {
   border: 0;
   padding: 7px 10px 20px 0px;
   background-color: rgba(0, 0, 0, 0.2);
-  -webkit-flex: 1 100%;
-  -ms-flex: 1 100%;
   flex: 1 100%;
   z-index: 4; }
   #contactSection button {
@@ -249,10 +243,10 @@ nav {
 .codeBody {
   position: absolute;
   border-radius: 7px 7px 7px 7px;
-  background-color: #ffffff;
-  width: 60%;
-  height: 330px;
-  z-index: 1; }
+  width: 70%;
+  z-index: 1;
+  margin: 4% 0 0 0;
+  text-align: center; }
 
 #playlist {
   margin: 0;
@@ -271,7 +265,7 @@ nav {
       line-height: .5;
       vertical-align: top;
       text-decoration: none;
-      color: #000000; }
+      color: #fff; }
     #playlist li img {
       width: 80px; }
     #playlist li a:hover {
@@ -283,7 +277,11 @@ nav {
   margin: 0;
   padding: 30px 0 0 0;
   border: 0;
-  list-style: none; }
+  list-style: none;
+  margin: 0 auto;
+  text-align: center; }
+  #codeExamples ul {
+    text-align: center; }
   #codeExamples li {
     display: inline-block;
     padding: 10px 0px 0px 15px;
@@ -301,35 +299,11 @@ nav {
       width: 90px; }
     #codeExamples li img {
       width: 90px;
-      opacity: 100%; }
+      opacity: 100%;
+      margin: 0 auto;
+      text-align: center; }
     #codeExamples li a:hover {
       text-decoration: underline; }
-
-.codeContents {
-  margin: auto;
-  position: absolute;
-  border-radius: 0 0 7px 7px;
-  border-top: 1px solid #EDEDED;
-  background-color: #fafafa;
-  width: 100%;
-  height: 35px;
-  bottom: 0; }
-
-.codeBaseline {
-  margin: auto;
-  position: absolute;
-  border-radius: 0 0 7px 7px;
-  padding: 0;
-  vertical-align: baseline;
-  line-height: 2.7;
-  border-top: 1px solid #EDEDED;
-  background-color: #fafafa;
-  width: 100%;
-  height: 35px;
-  bottom: 0;
-  text-align: center;
-  color: #5f6b73;
-  font-size: 12px; }
 
 #audioPlayer {
   margin: auto;
@@ -337,6 +311,22 @@ nav {
   padding: 0 10px 2px 10px;
   width: 95%;
   bottom: 0; }
+
+.audiojs {
+  background: rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 0.5);
+  font-family: 'Roboto', sans-serif;
+  width: 60%;
+  margin: 0 auto; }
+
+.audiojs .scrubber {
+  background-color: #fff;
+  background: #fff;
+  width: 70%; }
+
+.audiojs .progress {
+  background: rgba(64, 121, 189, 0.7);
+  background-color: rgba(64, 121, 189, 0.7); }
 
 .redEmoji {
   color: #961c1c;
