--- a/css/master.sass
+++ b/css/master.sass
@@ -231,10 +231,11 @@ nav
 .codeBody
   position: absolute
   border-radius: 7px 7px 7px 7px
-  background-color: #ffffff
-  width: 60%
-  height: 330px
+  background-color:
+  width: 70%
   z-index: 1
+  margin: 4% 0 0 0
+  text-align: center
 
 #playlist
   margin: 0
@@ -253,7 +254,7 @@ nav
       line-height: .5
       vertical-align: top
       text-decoration: none
-      color: #000000
+      color: #fff
     img
       width: 80px
     a:hover
@@ -265,6 +266,10 @@ nav
   padding: 30px 0 0 0
   border: 0
   list-style: none
+  margin: 0 auto
+  text-align: center
+  ul
+    text-align: center
   li
     display: inline-block
     padding: 10px 0px 0px 15px
@@ -283,41 +288,29 @@ nav
     img
       width: 90px
       opacity: 100%
+      margin: 0 auto
+      text-align: center
     a:hover
       text-decoration: underline
-
-.codeContents
-  margin: auto
-  position: absolute
-  border-radius: 0 0 7px 7px
-  border-top: 1px solid #EDEDED
-  background-color: #fafafa
-  width: 100%
-  height: 35px
-  bottom: 0
-
-.codeBaseline
-  margin: auto
-  position: absolute
-  border-radius: 0 0 7px 7px
-  padding: 0
-  vertical-align: baseline
-  line-height: 2.7
-  border-top: 1px solid #EDEDED
-  background-color: #fafafa
-  width: 100%
-  height: 35px
-  bottom: 0
-  text-align: center
-  color: #5f6b73
-  font-size: 12px
 #audioPlayer
   margin: auto
   position: absolute
   padding: 0 10px 2px 10px
   width: 95%
   bottom: 0
-
+.audiojs
+  background: rgba(0, 0, 0, 0.5)
+  background-color: rgba(0, 0, 0, 0.5)
+  font-family: 'Roboto', sans-serif
+  width: 60%
+  margin: 0 auto
+.audiojs .scrubber
+  background-color: #fff
+  background: #fff
+  width: 70%
+.audiojs .progress
+  background: rgba(64, 121, 189, 0.7)
+  background-color: rgba(64, 121, 189, 0.7)
 // Other styles
 .redEmoji
   color: rgb(150, 28, 28)
